--- a/EShopping/EShopping/Areas/Administrator/Views/Shared/_AdminLayout.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Shared/_AdminLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Dashboard</title>
+    <title>Electric Store</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -176,31 +176,31 @@
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
                              with font-awesome or any other icon font library -->
-                        <li class="nav-item has-treeview menu-open">
-                            <a href="#" class="nav-link active">
-                                <i class="nav-icon fa fa-dashboard"></i>
+                        <li class="nav-item has-treeview ">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fa fa-user"></i>
                                 <p>
-                                    Dashboard
+                                    Management About
                                     <i class="right fa fa-angle-left"></i>
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link active">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Dashboard v1</p>
+                                    <a href="#" class="nav-link">
+                                        <i class="fa fa-user-circle nav-icon"></i>
+                                        <p>About Us</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Dashboard v2</p>
+                                        <i class="fa fa-leaf nav-icon"></i>
+                                        <p>Branch</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Dashboard v3</p>
+                                        <i class="fa fa-list-alt nav-icon"></i>
+                                        <p>Menu</p>
                                     </a>
                                 </li>
                             </ul>
@@ -209,8 +209,8 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fa fa-th"></i>
                                 <p>
-                                    Widgets
-                                    <span class="right badge badge-danger">New</span>
+                                    News
+                                    
                                 </p>
                             </a>
                         </li>
@@ -218,91 +218,104 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fa fa-pie-chart"></i>
                                 <p>
-                                    Charts
+                                    Products
                                     <i class="right fa fa-angle-left"></i>
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>ChartJS</p>
+                                        <i class="fa fa-cube nav-icon"></i>
+                                        <p>Size</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Flot</p>
+                                        <i class="fa fa-certificate  nav-icon"></i>
+                                        <p>Color</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Inline</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fa fa-tree"></i>
-                                <p>
-                                    UI Elements
-                                    <i class="fa fa-angle-left right"></i>
-                                </p>
-                            </a>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>General</p>
+                                        <i class="fa fa-newspaper-o nav-icon"></i>
+                                        <p>Category</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Icons</p>
+                                        <i class="fa fa-server nav-icon"></i>
+                                        <p>Supplier</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Buttons</p>
+                                        <i class="fa fa-sticky-note nav-icon"></i>
+                                        <p>Promotion</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Sliders</p>
+                                        <i class="fa fa-opencart nav-icon"></i>
+                                        <p>Products</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        <i class="fa fa-object-group nav-icon"></i>
+                                        <p>Products-Promotion</p>
                                     </a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item has-treeview">
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fa fa-edit"></i>
+                                <i class="nav-icon fa fa-first-order"></i>
                                 <p>
-                                    Forms
+                                    Order
                                     <i class="fa fa-angle-left right"></i>
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>General Elements</p>
+                                        <i class="fa fa-life-saver nav-icon"></i>
+                                        <p>Order</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Advanced Elements</p>
+                                        <i class="fa fa-th-list nav-icon"></i>
+                                        <p>Order Details</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Editors</p>
+                                        <i class="fa fa-pie-chart nav-icon"></i>
+                                        <p>Statistical</p>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item has-treeview">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fa fa-user"></i>
+                                <p>
+                                    Customer
+                                    <i class="fa fa-angle-left right"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        <i class="fa fa-empire nav-icon"></i>
+                                        <p>Customer</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        <i class="fa fa-address-book nav-icon"></i>
+                                        <p>Shipper</p>
                                     </a>
                                 </li>
                             </ul>
@@ -311,21 +324,27 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fa fa-table"></i>
                                 <p>
-                                    Tables
+                                    Employees
                                     <i class="fa fa-angle-left right"></i>
                                 </p>
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Simple Tables</p>
+                                        <i class="fa fa-users nav-icon"></i>
+                                        <p>Employee</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">
-                                        <i class="fa fa-circle-o nav-icon"></i>
-                                        <p>Data Tables</p>
+                                        <i class="fa fa-spinner nav-icon"></i>
+                                        <p>Role</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">
+                                        <i class="fa fa-share-alt nav-icon"></i>
+                                        <p>Role-Employee</p>
                                     </a>
                                 </li>
                             </ul>
