--- a/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
+++ b/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
@@ -81,7 +81,8 @@
                         <li><a href="#">About</a></li>
                         <li><a href="#">Delivery</a></li>
                         <li><a href="#">News</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Contact</a></li>                      
                         <div class="clear"></div>
                     </ul>
                 </div>
