--- a/EShopping/EShopping/Areas/Administrator/Views/News/Create.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/News/Create.cshtml
@@ -8,7 +8,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "News", null, FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -33,10 +33,12 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NewsImgs, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NewsImgs, htmlAttributes: new { @class = "control-label col-md-2", @id = "Avatar" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.NewsImgs, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NewsImgs, "", new { @class = "text-danger" })
+                <div class="col-md-10">
+                    <input type="file" id="Avatar" name="upload" />
+                </div>
+
             </div>
         </div>
 
