--- a/EShopping/EShopping/Areas/Administrator/Views/News/Index.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/News/Index.cshtml
@@ -34,6 +34,7 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.NewsImgs)
+            <img src="~/UploadImg/News/@item.NewsImgs" />
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.NewsId }) |
