--- a/EShopping/EShopping/Areas/Administrator/Views/Regions/Create.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Regions/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2 class="text-center">Create Regions</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Region</h4>
+      
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -34,14 +34,21 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <button type="submit" class="btn btn-warning" aria-label="Left Align">
+                    <span class="fa fa-floppy-o" aria-hidden="true"></span>
+                </button>
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <a href="@Url.Action("Index", "Regions")" class="btn btn-default">
+        <i class="fa fa-sort-alpha-asc"></i>
+        <span>
+
+        </span>
+    </a>
 </div>
 
 @section Scripts {
