--- a/EShopping/EShopping/Areas/Administrator/Views/Shared/_AdminLayout.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Shared/_AdminLayout.cshtml
@@ -224,7 +224,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Sizes")" class="nav-link">
                                         <i class="fa fa-cube nav-icon"></i>
                                         <p>Size</p>
                                     </a>
@@ -243,25 +243,25 @@
                                 </li>
 
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Suppliers")" class="nav-link">
                                         <i class="fa fa-server nav-icon"></i>
                                         <p>Supplier</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Promitions")" class="nav-link">
                                         <i class="fa fa-sticky-note nav-icon"></i>
                                         <p>Promotion</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Products")" class="nav-link">
                                         <i class="fa fa-opencart nav-icon"></i>
                                         <p>Products</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Products-Promotion")" class="nav-link">
                                         <i class="fa fa-object-group nav-icon"></i>
                                         <p>Products-Promotion</p>
                                     </a>
@@ -278,13 +278,13 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Orders")" class="nav-link">
                                         <i class="fa fa-life-saver nav-icon"></i>
                                         <p>Order</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "OrderDetails")" class="nav-link">
                                         <i class="fa fa-th-list nav-icon"></i>
                                         <p>Order Details</p>
                                     </a>
@@ -308,13 +308,13 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Customers")" class="nav-link">
                                         <i class="fa fa-empire nav-icon"></i>
                                         <p>Customer</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Shippers")" class="nav-link">
                                         <i class="fa fa-address-book nav-icon"></i>
                                         <p>Shipper</p>
                                     </a>
@@ -337,13 +337,13 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Employees")" class="nav-link">
                                         <i class="fa fa-users nav-icon"></i>
                                         <p>Employee</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("Index", "Roles")" class="nav-link">
                                         <i class="fa fa-spinner nav-icon"></i>
                                         <p>Role</p>
                                     </a>
