--- a/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
+++ b/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="~/Content/LibUser/js/startstop-slider.js"></script>
 </head>
 <body>
+
     <div class="wrap">
         <div class="header">
             <div class="headertop_desc">
@@ -81,7 +82,8 @@
                         <li><a href="#">About</a></li>
                         <li><a href="#">Delivery</a></li>
                         <li><a href="#">News</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="@Url.Action("Contact", "Contact")">Contact</a></li>
                         <div class="clear"></div>
                     </ul>
                 </div>
