--- a/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
+++ b/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
@@ -176,14 +176,8 @@
         <div class="wrap">
             <div class="section group">
                 <div class="col_1_of_4 span_1_of_4">
-                    <h4>Information</h4>
-                    <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Customer Service</a></li>
-                        <li><a href="#">Advanced Search</a></li>
-                        <li><a href="#">Orders and Returns</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
+                    <h4>Branch</h4>
+                    @{Html.RenderAction("Branch", "Home");}
                 </div>
                 <div class="col_1_of_4 span_1_of_4">
                     <h4>Why buy from us</h4>
