--- a/EShopping/EShopping/Areas/Administrator/Views/Colors/Index.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Colors/Index.cshtml
@@ -5,30 +5,64 @@
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2 class="text-center">Color</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <a href="@Url.Action("Create", "Colors")" class="btn btn-info">
+        <i class="fa fa-floppy-o"></i>
+        <span>
+
+        </span>
+    </a>
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ColerName)
-        </th>
-        <th></th>
-    </tr>
+<table class="table table-striped table-bordered" id="tablefillset">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ColerName)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ColerName)
+                </td>
+                <td>
+                    <a href="@Url.Action("Edit", "Colors", new { id = item.ColerId })" class="btn btn-success">
+                        <i class="fa fa-flash"></i>
+                        <span>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ColerName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ColerId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ColerId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ColerId })
-        </td>
-    </tr>
-}
+                        </span>
+                    </a>
+                    |
+                    <a href="@Url.Action("Details", "Colors", new { id = item.ColerId })" class="btn btn-primary">
+                        <i class="fa fa-list-alt"></i>
+                        <span>
 
+                        </span>
+                    </a>
+                    |
+                    <a href="@Url.Action("Delete", "Colors", new { id = item.ColerId })" class="btn btn-danger">
+                        <i class="fa fa-trash"></i>
+                        <span>
+
+                        </span>
+                    </a>
+                </td>
+            </tr>
+        }
+    </tbody>
 </table>
+@section Scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#tablefillset').DataTable();
+
+
+        });
+    </script>
+}
