--- a/EShopping/EShopping/Areas/Administrator/Views/News/Edit.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/News/Edit.cshtml
@@ -1,13 +1,13 @@
 ﻿@model EShopping.Models.News
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -15,6 +15,8 @@
         <h4>News</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.NewsId)
+
         <div class="form-group">
             @Html.LabelFor(model => model.NewsDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -32,17 +34,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NewsImgs, htmlAttributes: new { @class = "control-label col-md-2", @id = "Avatar" })
+            @Html.LabelFor(model => model.NewsImgs, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="col-md-10">
-                    <input type="file" id="Avatar" name="upload" />
-                </div>
+                @Html.EditorFor(model => model.NewsImgs, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NewsImgs, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
