--- a/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
+++ b/EShopping/EShopping/Views/Shared/_UserLayout.cshtml
@@ -81,8 +81,8 @@
                         <li class="active"><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Delivery</a></li>
-                        <li><a href="#">News</a></li>
-                        <li><a href="#">News</a></li>
+                        <li><a href="#">Heli</a></li>
+                        <li><a href="@Url.Action("News", "New")">News</a></li>
                         <li><a href="@Url.Action("Contact", "Contact")">Contact</a></li>
                         <div class="clear"></div>
                     </ul>
