--- a/EShopping/EShopping/Views/New/News.cshtml
+++ b/EShopping/EShopping/Views/New/News.cshtml
@@ -24,11 +24,12 @@
             <div class="grid news_desc">
                 <h3>@Html.DisplayFor(modelItem => item.NewTitles) </h3>
                 <h4>Posted on Aug 13th, 2013 by <span><a href="#">@Html.DisplayFor(modelItem => item.NewsBy)</a></span></h4>
-                <p>@Html.DisplayFor(modelItem => item.NewDetails)<a href="#" title="more">[....]</a></p>
+                <p>@Html.DisplayFor(modelItem => item.NewsDetails)<a href="#" title="more">[....]</a></p>
             </div>
         </div>
 }
-        <div class="content-pagenation">
+        <div class="content-pagenation
+
             <li><a href="#">Frist</a></li>
             <li class="active"><a href="#">1</a></li>
             <li><a href="#">2</a></li>
