--- a/EShopping/EShopping/Areas/Administrator/Views/News/Create.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/News/Create.cshtml
@@ -7,6 +7,7 @@
 
 <h2>Create</h2>
 
+
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
@@ -15,6 +16,14 @@
         <h4>News</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.NewTitles, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NewTitles, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NewTitles, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.NewsDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -32,11 +41,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NewsImgs, htmlAttributes: new { @class = "control-label col-md-2", @id = "Avatar" })
+            @Html.LabelFor(model => model.NewsImgs, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <div class="col-md-10">
-                    <input type="file" id="Avatar" name="upload" />
-                </div>
+                @Html.EditorFor(model => model.NewsImgs, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NewsImgs, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.NewUpdate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NewUpdate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NewUpdate, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -51,3 +67,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
