--- a/EShopping/EShopping/Areas/Administrator/Views/News/Delete.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/News/Delete.cshtml
@@ -13,6 +13,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.NewTitles)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NewTitles)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.NewsDetails)
         </dt>
 
@@ -34,6 +42,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.NewsImgs)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.NewUpdate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NewUpdate)
         </dd>
 
     </dl>
