--- a/EShopping/EShopping/Areas/Administrator/Views/News/Index.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/News/Index.cshtml
@@ -13,6 +13,9 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.NewTitles)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.NewsDetails)
         </th>
         <th>
@@ -21,11 +24,17 @@
         <th>
             @Html.DisplayNameFor(model => model.NewsImgs)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.NewUpdate)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.NewTitles)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.NewsDetails)
         </td>
@@ -34,6 +43,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.NewsImgs)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.NewUpdate)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.NewsId }) |
