--- a/EShopping/EShopping/Areas/Administrator/Views/Shared/_AdminLayout.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Shared/_AdminLayout.cshtml
@@ -613,6 +613,11 @@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Content/LibAdmin/plugins/ckeditor/ckeditor.js"></script>
     <link href="~/Content/LibAdmin/plugins/ckeditor/skins/moono-lisa/editor.css" rel="stylesheet" />
+    <script>
+    CKEDITOR.replace('editor1'
+        );
+    </script>
+
     <!-- jQuery UI 1.11.4 -->
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
