--- a/EShopping/EShopping/Content/ConfigImg.css
+++ b/EShopping/EShopping/Content/ConfigImg.css
@@ -2,3 +2,12 @@
     width:100px;
     height:60px;
 }
+.Huy{
+    width:100px;
+    height:60px;
+}
+.config_Product{
+
+    width: 120px;
+    height:80px;
+}
