--- a/EShopping/EShopping/Areas/Administrator/Views/News/Create.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/News/Create.cshtml
@@ -78,9 +78,9 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 
-    <script>
+    @*<script>
         CKEDITOR.replace('editor1'
             );
-    </script>
+    </script>*@
   
 }
