--- a/EShopping/EShopping/Areas/Administrator/Views/Products/Create.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Products/Create.cshtml
@@ -8,12 +8,12 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Products", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Product</h4>
+        
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -35,7 +35,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductDetails, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.ProductDetails, new { @id = "editor1", htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProductDetails, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductUpdate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductUpdate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ProductUpdate, new { htmlAttributes = new { @class = "form-control",@id = "datepicker"  } })
                 @Html.ValidationMessageFor(model => model.ProductUpdate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -59,8 +59,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductSold, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductSold, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProductSold, "", new { @class = "text-danger" })
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.ProductSold)
+                    @Html.ValidationMessageFor(model => model.ProductSold, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
@@ -81,9 +83,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductImg, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ProductImg, htmlAttributes: new { @class = "control-label col-md-2", @id="Avatar" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductImg, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="file" id="Avatar" name="upload" />
                 @Html.ValidationMessageFor(model => model.ProductImg, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -105,6 +107,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.ProductPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ProductPrice, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ProductPrice, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -118,4 +128,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
 }
