--- a/EShopping/EShopping/Areas/Administrator/Views/Products/Delete.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Products/Delete.cshtml
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -69,6 +69,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ProductPrice)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ProductPrice)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Category.CategoryName)
         </dt>
 
@@ -105,9 +113,16 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
+    <div class="form-actions no-color">
+        <button type="submit" class="btn btn-danger" aria-label="Left Align">
+            <span class="fa fa-trash" aria-hidden="true"></span>
+        </button> |
+        <a href="@Url.Action("Index", "Products")" class="btn btn-default">
+            <i class="fa fa-sort-alpha-asc"></i>
+            <span>
+
+            </span>
+        </a>
+    </div>
     }
 </div>
