--- a/EShopping/EShopping/Areas/Administrator/Views/Products/Details.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Products/Details.cshtml
@@ -68,6 +68,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ProductPrice)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ProductPrice)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Category.CategoryName)
         </dt>
 
