--- a/EShopping/EShopping/Areas/Administrator/Views/Products/Edit.cshtml
+++ b/EShopping/EShopping/Areas/Administrator/Views/Products/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Administrator/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2 class="text-center">Edit Products</h2>
 
 
 @using (Html.BeginForm())
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Product</h4>
+  
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ProductId)
@@ -37,7 +37,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductDetails, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ProductDetails, new { @id = "editor1",htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ProductDetails, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductUpdate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductUpdate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ProductUpdate, new { htmlAttributes = new { @class = "form-control", @id = "datepicker"} })
                 @Html.ValidationMessageFor(model => model.ProductUpdate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -61,8 +61,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProductSold, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductSold, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProductSold, "", new { @class = "text-danger" })
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.ProductSold)
+                    @Html.ValidationMessageFor(model => model.ProductSold, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
@@ -83,11 +85,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductImg, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ProductImg, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProductImg, "", new { @class = "text-danger" })
-            </div>
+            @Html.HiddenFor(model => model.ProductImg)
         </div>
 
         <div class="form-group">
@@ -107,6 +105,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.ProductPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ProductPrice, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ProductPrice, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
@@ -115,9 +121,18 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <a href="@Url.Action("Index", "Products")" class="btn btn-default">
+        <i class="fa fa-sort-alpha-asc"></i>
+        <span>
+
+        </span>
+    </a>
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+<script>
+        CKEDITOR.replace('editor1'
+            );
+</script>
 }
