--- a/EShopping/EShopping/Views/Home/ProductStyle1Partial.cshtml
+++ b/EShopping/EShopping/Views/Home/ProductStyle1Partial.cshtml
@@ -14,7 +14,7 @@
 @foreach (var item in Model)
 {
     <div class="grid_1_of_4 images_1_of_4">
-        @Html.DisplayFor(modelItem => item.ProductImg)
+        <img src="~/UploadImg/Products/@item.ProductImg" width="50" height="50" />
         <h2>@Html.DisplayFor(modelItem => item.ProductName)</h2>
         <div class="price-details">
             <div class="price-number">
